# hayashi

./: .gitignore  .hay_history  .hayashi_history  AGENTS.md  CHANGELOG.md  CNAME  COMPARISON.md  Cargo.toml  LICENSE  LICENSE-BOOKS.md  README.md  ROADMAP.md  about.html  changelog.html  dados.csv  deny.toml  hayashi  index.html  painel.csv  plugins.html  repositories.txt  uhr_00.hy  workflow_resultados.txt
.agents/: AGENTS.md
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  validation.yml
benchmarks/: .gitignore  README.md  run.sh
benchmarks/datasets/: generate.py
benchmarks/implementations/: arima_python.py  arima_r.R  garch_python.py  garch_r.R  iv_python.py  iv_r.R  logit_python.py  logit_r.R  ols_hayashi.hay  ols_python.py  ols_r.R  ops_filter.py  ops_function_call.py  ops_generate_expr.py  ops_generate_random.py  ops_groupby_mean.py  ops_load_csv.py  ops_loop.py  ops_merge.py  ops_parallel_loop.py  ops_rbind.py  ops_sort.py  panel_python.py  panel_r.R  probit_python.py  probit_r.R  qreg_python.py  qreg_r.R  var_python.py  var_r.R
benchmarks/results/: README.md
benchmarks/scripts/: benchmark_ops.py  common.py  run.py  summarize.py
book/: book.tex
book/chapters/: 00_prefacio.tex  01_introducao.tex  02_instalacao.tex  03_repl.tex  04_tipos_valores.tex  06_operadores.tex  08_lacos.tex  09_funcoes.tex  12_listas_dicionarios.tex  13_dataframes.tex  14_manipulacao.tex  15_pipes.tex  16_modulos.tex  17_ols.tex  17_probabilidade.tex  18_ols.tex  19_iv.tex  20_painel.tex  21_did.tex  22_logit_probit.tex  26_arma.tex  27_arima.tex  33_contagem.tex  41_multivariada.tex  43_regime.tex  44_filtros.tex  45_svar.tex  46_inferencia.tex  48_raiz_unitaria2.tex  49_filtros2.tex  51_local.tex  52_ardl.tex  53_kalman.tex  apendice_a_instalacao_avancada.tex  apendice_b_referencia_rapida.tex  apendice_c_equivalencias.tex
book/codes/: 22_logit_probit.hay  25_gmm.hay  27_arima.hay  30_garch.hay  32_synth.hay  39_regularizacao.hay  49_filtros2.hay
book_en/: book.tex
book_en/chapters/: 00_preface.tex  01_introduction.tex  02_installation.tex  03_repl.tex  04_types_values.tex  05_variables_scope.tex  06_operators.tex  07_control_flow.tex  08_loops.tex  09_functions.tex  10_errors.tex  11_strings.tex  12_lists_dicts.tex  13_dataframes.tex  14_manipulation.tex  15_pipes.tex  16_modules.tex  17_debugging.tex  18_ols.tex  18_probability.tex  19_iv.tex  20_iv.tex  20_panel.tex  21_did.tex  22_did.tex  22_logit_probit.tex  24_qreg.tex  24_rdd.tex  25_gmm.tex  26_arma.tex  27_arima.tex  27_arma.tex  28_arima.tex  28_var.tex  29_coint.tex  30_coint.tex  30_garch.tex  31_garch.tex  31_psm.tex  32_psm.tex  (+32 more)
book_en/codes/: 18_ols.hay  30_garch.hay  31_psm.hay  34_limitada.hay  35_multinomial.hay  41_multivariada.hay  42_glm.hay  45_svar.hay  48_raiz_unitaria2.hay  51_local.hay
book_pt_BR/: .gitignore  book.tex
book_pt_BR/chapters/: 01_introducao.tex  03_repl.tex  04_tipos_valores.tex  05_variaveis_escopos.tex  07_controle_fluxo.tex  08_lacos.tex  10_erros.tex  11_strings.tex  13_dataframes.tex  14_manipulacao.tex  15_pipes.tex  16_modulos.tex  17_depuracao.tex  18_ols.tex  18_probabilidade.tex  19_iv.tex  20_iv.tex  20_painel.tex  21_did.tex  22_did.tex  22_logit_probit.tex  23_logit_probit.tex  23_qreg.tex  24_rdd.tex  25_rdd.tex  26_arma.tex  26_gmm.tex  27_arima.tex  27_arma.tex  28_arima.tex  28_var.tex  29_coint.tex  29_var.tex  30_coint.tex  30_garch.tex  31_psm.tex  32_synth.tex  33_contagem.tex  33_synth.tex  34_limitada.tex  (+16 more)
book_pt_BR/codes/: 19_iv.hay  20_painel.hay  21_did.hay  23_qreg.hay  24_rdd.hay  26_arma.hay  28_var.hay  29_coint.hay  33_contagem.hay  36_sobrevivencia.hay  37_painel_avancado.hay  38_sur.hay  40_bootstrap.hay  42_glm.hay  43_regime.hay  44_filtros.hay  46_inferencia.hay  47_painel2.hay  50_svar2.hay  53_kalman.hay  53_kalman_vals.hay  test_ardl.hay  test_kalman.hay
css/: style.css
docs/: book.toml  error-style.md
docs/src/: SUMMARY.md  debugging.md  intro.md  trust-model.md
editors/vscode/: .vscodeignore  README.md  install.sh  language-configuration.json  package.json
examples/: aggregation.hay  arima_validation.hay  auto.hay  count_models.hay  double_sort.hay  drop_keep.hay  egen.hay  formula_transforms.hay  lpdid.hay  panel.hay  panel_diagnostics.hay  pipes_closures.hay  preserve_restore.hay  pwcorr.hay  series_decomposition.hay  svar_threesls_dfm.hay  test_cov_display.hay  time_series.hay
examples/data/: gen_xlsx.py  lpdid_test.csv  sample.db  sample.json  sample.tsv  sample_semicolon.csv
exemplos/: archtest_validacao.hay  archtest_validacao.hy  arima.hay  auto.hy  cancer.hy  cattaneo_ttest.hy  causal_avancado.hy  censura_selecao.hy  combinacao.hay  diagnosticos_painel.hy  drop_keep.hy  efeitos_mistos.hy  eststo_loop.hay  ets_threshold_plots.hay  ets_threshold_plots.hy  fama_macbeth.hy  foreach_regression.hay  funcoes_matematicas.hay  garch_validacao.hy  glm_influence_nonparam.hy  graficos_svg.hy  inferencia_causal.hay  inferencia_causal.hy  input_display.hay  input_display.hy  inspecao.hay  limpeza.hay  lincom.hay  load_formats.hay  markov_clogit_hettest.hy  missing_values.hy  modelos_contagem_zero.hay  modelos_contagem_zero.hy  modelos_ordinais.hy  multivariada_bootstrap.hay  multivariada_bootstrap.hy  nonparam_cancorr_tabstat.hy  painel.hy  painel_avancado.hay  painel_avancado.hy  (+21 more)
exemplos/data/: test_module.hay
js/: main.js
scripts/: check_pt_errors.sh  publish-site.sh  readme_smoke.hay  translate_errors_pr1.py
site/: about.html  changelog.html  community.html  docs.html  index.html  playground.html  plugins.html
site/css/: playground.css  style.css
site/js/: main.js  playground.js
site/wasm/: hayashi_lang.d.ts  hayashi_lang_bg.wasm.d.ts
src/: lib.rs  main.rs
src/io/: dsv.rs  dta.rs  excel.rs  fetch.rs  mod.rs  odbc.rs  packages.rs  parquet.rs  plot.rs  sqlite.rs
src/lang/: ast.rs  (+8 more)
tests/: dap.rs  error_messages_english.rs  numerical_golden.rs  smoke.rs
validation/: DESCRIPTION  MATRIX.md  README.md  matrix.yml  requirements.txt  run.py  test_run.py
wasm/: hayashi_lang.js
(+641 files in other folders)
